# Pong-Evolved

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  GITHUB_CHECKLIST.md  LICENSE  PROJECT_OVERVIEW.md  README.md  requirements.txt  setup.py
.github/workflows/: ci.yml
config/ai/: train_config.yaml
config/game/: powerups.json
examples/: demo_ai.py  demo_pong.py  demo_train.py
scripts/: build.sh
scripts/data_collection/: collect_data.py  create_sample_data.py
scripts/evaluation/: evaluate_agent.py  evaluate_bc.py  load_test.py
scripts/training/: hybrid_train.py  train_bc.py  train_dqn.py  train_loop.py
src/: __init__.py
src/ai/: __init__.py  agent.py  inference_server.py  model.py  pong_env.py  replay_buffer.py
src/game/: AIClient.cpp  AIClient.h  Ball.cpp  Ball.h  Game.cpp  Game.h  Paddle.cpp  Paddle.h  PowerUp.cpp  PowerUp.h  PowerUpManager.cpp  PowerUpManager.h  __init__.py  main.cpp
src/utils/: data_utils.py  visualize.py
tests/integration/: test_ai_client.py
tests/unit/: test_env_connection.py  test_model_forward.py
